# fuel-block-committer

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.html  README.md  SECURITY.md  _typos.toml  compose.yaml  compose2.yaml  f.patch  fuel-toolchain.toml  log.txt  run_bench.sh  run_local_db.sh  run_tests.sh  test.patch  update_db_preview.sh
.github/: CODEOWNERS
.github/scripts/: verify_chart_version.sh
.github/workflows/: ci.yml  helm-publish.yaml
.sqlx/: query-002a8775bb25fb914689aea1373c7aefeeb89c18375173a00991cf38415a8ef0.json  query-0198e3e04ffa7668562e2e485ef4ccde2a267f0a14161b75bd5c4b6b252eb687.json  query-0262541213bf75b490f385cca5b76bcd130d2fcb4cdd88ababb3348d28999fa8.json  query-050da178612b738321d948e01675dd48b98ec38be553251f532ae666a34da9a0.json  query-08b8a731d2750dbd8ee2b7d4f550a31cacb7f5a91c3fc1bed412a856efd805de.json  query-0aa43f1787ef7b9317e6a0ad35040d8ca4ba05fae241ced5bdd72c6b25173409.json  query-0cddf0c19efcd5787d1501d8fbc3073903371c6128da0aec31ad6628a8aa4c60.json  query-0d647f9541231fda2ce6e7a3f14915a098fecdca8ad50db09ef58be11834defe.json  query-0f13132dae0a7d40cde633315275865b6f3ea2de333315238d4f0d5ad3cd75ff.json  query-0fc770352aa93402d2513fea0a93997788fc43a6188e028870d5f866a46c83cc.json  query-111a622bad3c042be9ee7fdf3ce9db91900473950c921260eaee6c3bff4c7096.json  query-11c3dc9c06523c39e928bfc1c2947309b2f92155b5d2198e39b42f687cc58f40.json  query-11ce7ac326ccaf0b82bc02b66b0ca136e0363ccf975f1d24a925b272fc95ef8d.json  query-126284fed623566f0551d4e6a343ddbd8800dd6c27165f89fc72970fe8a89147.json  query-13656c780b9aad5e5b3b2fced1b92323b0b097fce24361fe771122b3d574f685.json  query-14a630268f676e961c35d4804724aa35ac1d5ae9763f9383506cd05b42bb0213.json  query-18049cc4c58a991f166a1548c43fb4f0fe9ff4820be993afe9dba8e57f6e1df8.json  query-1d3bc51e22f98d6ef951b2c05fe60d04e1f60095dfa1c797b6c7c5c27c111cc4.json  query-1fe55a6d422b1619a6b27ae3ab04682873b73b0ab53d8df9db87744cc2367676.json  query-2096d1ddfd76357493610c7d1a11022ce99ec1d9fd603fb10d4723ca05267627.json  query-2207b448e46117ad64084feefc49e3f45511e91468b32f5ef0024f92730588a6.json  query-2269fd91bc4175536763a97072dba53c913b1c4d71912e04b51c1d49391168a2.json  query-229378fb46537ae6e0767c22358ff9e2a14be2efe12d71b33faa16ced88dfa2a.json  query-23fea22d8435113eb8e57cbb447318418d8ad803d003c06bea3e3af1781a0f19.json  query-2453348657ddacf73b6cd293eae6e8d2b1b5193d63400598de5f880ae4bd0115.json  query-2502a8cec8e562082f3e990e73934a2bf55e0ea2347c2c58323c4aa951f18d0e.json  query-266a53bb892dca106ef57ed4617a44e2d08f1e3fe2d525722020d1a32aa8111c.json  query-26b0ea141fd42d49dba3af670d49256cb56247f1e23dc8ff6c4955f99a5d980a.json  query-29bdb0b9c06cfd11ac30abfebb5a542df6fad51dee15b2d9abe58bf89fd9fd38.json  query-2e9f0e15644765d9276402081dd759b5608af2c2fe2fcc4e79ef7d8184ceece9.json  query-2edbf29e90d73c8752e014dd66e6e977ca917ce27159fe47ca3546762ce73182.json  query-30712a66c11a1c96e45d2ad23c5921fa4c884b127fde30c20d93bc50dc1dbafe.json  query-337f06aa3fddcddc7854094ccc542c6947ddd5430a5d7fbe77a4069c43002667.json  query-347c679bb769ee347241911304f97824a20be059e08a3dc09f91423599b18a60.json  query-35c6b18bda2ad0cf3b4453b655542ffb525f3f338a96e948d037c065ce692f25.json  query-364b2d440e7e32698bd2161e0ef79609aeec4a47cb4c2aedbb9c4ad75e748c17.json  query-365408c350d49ba41303b49b319a0fb317ced0dc5bae79b8a491b0807cf97958.json  query-39d3fae6fdd67a2324fae4d5e828f69f2298cd5b0f7eb1609ed189269c6f677c.json  query-3b444d3d835e8f3d6f2368f21b1dfabe6d2e32107d639c068dca75a5d870d543.json  query-3e299f6aa08f81f5331ce1e79b535885abed9a46281cfd48848cb44b72b5651b.json  (+106 more)
actors/: Cargo.toml
api/: Cargo.toml
cli/: Cargo.toml
client/: Cargo.toml
committer/: Cargo.toml
committer/src/: api.rs  config.rs  errors.rs  main.rs  services.rs  setup.rs
committer/src/services/: block_committer.rs  block_watcher.rs  commit_listener.rs  health_reporter.rs  status_reporter.rs  wallet_balance_tracker.rs
configurations/development/: config.toml
crates/actors/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
db_preview/: relationships.dot
db_preview/dots/: relationships.dot
deployment/: Dockerfile
deployment/charts/: Chart.yaml  values.yaml
deployment/scripts/: .env  service-delete.sh  service-deploy.sh
docs/: book.toml
domain_model/: Cargo.toml
e2e/: Cargo.toml  build.rs
e2e/benches/: Cargo.toml
e2e/benches/src/: data.rs  handlers.rs  main.rs  template.rs
e2e/benches/templates/: control_panel.html
e2e/helpers/: Cargo.toml  build.rs
e2e/helpers/src/: committer.rs  eth_node.rs  fuel_node.rs  fuel_node_simulated.rs  kms.rs  lib.rs  whole_stack.rs
e2e/helpers/src/eth_node/: state_contract.rs
e2e/helpers/src/fuel_node_simulated/: graphql.rs  server.rs  simulation.rs
e2e/helpers/tests/: harness.rs
e2e/project/: foundry.toml
e2e/project/cache/: solidity-files-cache.json
e2e/src/: anvil.rs  chain_state_contract.rs  committer.rs  eth_node.rs  fuel_node.rs  kms.rs  lib.rs  whole_stack.rs
e2e/src/eth_node/: deployed_contract.rs  state_contract.rs
e2e/tests/: Cargo.toml
e2e/tests/tests/: eigen_costs.rs  eigen_kms.rs  eigen_state.rs  harness.rs
eth_node/: Dockerfile  hardhat.config.ts  health_check.sh  run.sh
fee_algo_simulation/: Cargo.toml
fee_algo_simulation/src/: handlers.rs  index.html  main.rs  models.rs  state.rs  utils.rs
fee_algo_simulation/src/handlers/: block_time_info.rs  error.rs  fee.rs  index.html  index.rs  simulate.rs
fuel_node/: Dockerfile
fuel_simulator/: Cargo.toml
fuel_simulator/src/: main.rs  server.rs
helm/fuel-block-committer/: Chart.yaml  values.yaml
migrations/: 0001_initial.down.sql
src/: actors.rs  adapters.rs  api.rs  cli.rs  common.rs  config.rs  errors.rs  health_check.rs  lib.rs  main.rs  metrics.rs  services.rs  setup.rs  telemetry.rs
src/actors/: block_watcher.rs  eth_committer.rs  messages.rs
src/adapters/: block_fetcher.rs  eth_metrics.rs  ethereum_adapter.rs  ethereum_rpc.rs  runner.rs  (+4 more)
tests/: committer.rs  eth_node.rs  eth_test_adapter.rs  fuel_node.rs  harness.rs  utils.rs
(+55 files in other folders)
