[workspace]
resolver = "2"
members = [
  "committer",
  "e2e",
  "packages/clock",
  "packages/eth",
  "packages/fuel",
  "packages/metrics",
  "packages/ports",
  "packages/services",
  "packages/storage",
]

[workspace.package]
version = "0.6.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-block-committer"
rust-version = "1.79"
publish = false

[workspace.dependencies]
eth = { path = "./packages/eth", default-features = false }
fuel = { path = "./packages/fuel", default-features = false }
metrics = { path = "./packages/metrics", default-features = false }
ports = { path = "./packages/ports", default-features = false }
storage = { path = "./packages/storage", default-features = false }
services = { path = "./packages/services", default-features = false }
clock = { path = "./packages/clock", default-features = false }

nonempty = { version = "0.10", default-features = false }
test-case = { version = "3.3", default-features = false }
delegate = { version = "0.13", default-features = false }
trait-variant = { version = "0.1", default-features = false }
actix-web = { version = "4", default-features = false }
pretty_assertions = { version = "1.4", default-features = false }
alloy = { version = "0.2.1", default-features = false }
alloy-chains = { version = "0.1.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
aws-config = { version = "1.5.5", default-features = false }
aws-sdk-kms = { version = "1.36", default-features = false }
c-kzg = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
clap = { version = "4.5", default-features = false }
config = { version = "0.14", default-features = false }
fs_extra = { version = "1.3", default-features = false }
fuel-core-chain-config = { version = "0.31", default-features = false }
fuel-core-client = { version = "0.31", default-features = false }
fuel-core-types = { version = "0.31", default-features = false }
fuel-crypto = { version = "0.55", default-features = false }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false }
humantime = { version = "2.1", default-features = false }
impl-tools = { version = "0.10.0", default-features = false }
itertools = { version = "0.13", default-features = false }
mockall = { version = "0.12", default-features = false }
portpicker = { version = "0.1", default-features = false }
prometheus = { version = "0.13", default-features = false }
rand = { version = "0.8", default-features = false }
reqwest = { version = "0.12", default-features = false }
rlp = { version = "0.5.2", default-features = false }
secp256k1 = { version = "0.29", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.7.4", default-features = false }
tai64 = { version = "4.0.0", default-features = false }
tempfile = { version = "3.10", default-features = false }
testcontainers = { version = "0.20", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.37", default-features = false }
tokio-util = { version = "0.7", default-features = false }
flate2 = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2.3", default-features = false }
walkdir = { version = "2.5", default-features = false }
zip = { version = "2.1", default-features = false }
