[workspace]
resolver = "2"
members = [
  "committer",
  "e2e/benches",
  "e2e/helpers",
  "e2e/tests",
  "fee_algo_simulation",
  "fuel_simulator",
  "packages/adapters/clock",
  "packages/adapters/da",
  "packages/adapters/eigenda",
  "packages/adapters/eth",
  "packages/adapters/fuel",
  "packages/adapters/storage",
  "packages/benchmarks",
  "packages/encoding",
  "packages/metrics",
  "packages/services",
  "packages/signers",
  "packages/test-helpers",
]

[workspace.package]
version = "0.10.10"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2024"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-block-committer"
# be careful when bumping the rust version. If `fuel-core` isn't on the version
# you plan to bump to, make sure the encoding crate keeps using a rust version <= fuel-core
rust-version = "1.85"
publish = false

[workspace.dependencies]
clock = { path = "./packages/adapters/clock", default-features = false }
da = { path = "./packages/adapters/da", default-features = false }
eigenda = { path = "./packages/adapters/eigenda", default-features = false }
eth = { path = "./packages/adapters/eth", default-features = false }
fuel = { path = "./packages/adapters/fuel", default-features = false }
fuel-block-committer-encoding = { path = "./packages/encoding", default-features = false }
metrics = { path = "./packages/metrics", default-features = false }
services = { path = "./packages/services", default-features = false }
signers = { path = "./packages/signers", default-features = false }
storage = { path = "./packages/adapters/storage", default-features = false }
test-helpers = { path = "./packages/test-helpers/", default-features = false }
e2e-helpers = { path = "./e2e/helpers", default-features = false }

async-graphql = { version = "7", default-features = false }
async-graphql-actix-web = { version = "7", default-features = false }
governor = { version = "0.8", default-features = false }
actix-web = { version = "4", default-features = false }
base64 = { version = "0.22.1", default-features = false }
bitvec = { version = "1.0", default-features = false }
bytesize = { version = "1.3", default-features = false }
alloy = { version = "0.3.6", default-features = false }
xdg = { version = "2.5", default-features = false }
proptest = { version = "1.0", default-features = false }
rayon = { version = "1.10", default-features = false }
num_cpus = { version = "1.16", default-features = false }
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
aws-config = { version = "1.5.5", default-features = false }
aws-sdk-kms = { version = "1.36", default-features = false }
clap = { version = "4.5", default-features = false }
config = { version = "0.14", default-features = false }
delegate = { version = "0.13", default-features = false }
flate2 = { version = "1.0", default-features = false }
postcard = { version = "1.0", default-features = false }
fs_extra = { version = "1.3", default-features = false }
fuel-core-chain-config = { version = "0.41", default-features = false }
fuel-core-client = { version = "0.41", default-features = false }
fuel-core-types = { version = "0.41", default-features = false, features = [
  "da-compression",
] }
static_assertions = { version = "1.1", default-features = false }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false }
humantime = { version = "2.1", default-features = false }
itertools = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false }
mockall = { version = "0.12", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
nonempty = { version = "0.10", default-features = false }
portpicker = { version = "0.1", default-features = false }
pretty_assertions = { version = "1.4", default-features = false }
prometheus = { version = "0.13", default-features = false }
prost = { version = "0.13.4", default-features = false }
rand = { version = "0.8", default-features = false }
byte-unit = { version = "5.1", default-features = false }
reqwest = { version = "0.12", default-features = false }
secp256k1 = { version = "0.27", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha3 = { version = "0.10.8" }
sqlx = { version = "0.7.4", default-features = false }
tai64 = { version = "4.0.0", default-features = false }
tempfile = { version = "3.10", default-features = false }
test-case = { version = "3.3", default-features = false }
testcontainers = { version = "0.20", default-features = false }
# to be removed once alloy fixes the issue with blob encoding
c-kzg = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.37", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tonic = { version = "0.12.3", default-features = false }
tonic-build = { version = "0.12.3" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
trait-variant = { version = "0.1", default-features = false }
url = { version = "2.3", default-features = false }
walkdir = { version = "2.5", default-features = false }
zip = { version = "2.1", default-features = false }
cynic = { version = "3.1", default-features = false }
cynic-codegen = { version = "3.10", default-features = false }
rust-eigenda-client = { git = "https://github.com/segfault-magnet/eigenda-client-rs", branch = "feat/generic_signer" }
rust-eigenda-signers = { git = "https://github.com/segfault-magnet/eigenda-client-rs", branch = "feat/generic_signer" }
sha2 = { version = "0.10", default-features = false }
ethereum-types = "0.14.1"
