[package]
name = "fuel-block-committer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
actix-web = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["default", "derive"] }
config = { workspace = true, features = ["toml", "async"] }
eth = { workspace = true }
fuel = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
ports = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
services = { workspace = true }
storage = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
clock = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
ports = { workspace = true, features = ["test-helpers"] }
storage = { workspace = true, features = ["test-helpers"] }
