[package]
name = "fuel-block-committer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
actix-web = { workspace = true, features = ["macros"] }
byte-unit = { workspace = true, features = ["byte", "u128"] }
clap = { workspace = true, features = ["default", "derive"] }
clock = { workspace = true }
config = { workspace = true, features = ["async"] }
eigenda = { workspace = true }
eth = { workspace = true }
fuel = { workspace = true }
fuel-block-committer-encoding = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
signers = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
services = { workspace = true }
storage = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
url = { workspace = true }
ethereum-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
services = { workspace = true, features = ["test-helpers"] }
storage = { workspace = true, features = ["test-helpers"] }
