[package]
name = "fee_algo_simulation"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
services = { workspace = true }
anyhow = { workspace = true }
xdg = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
actix-web = { workspace = true, features = ["macros"] }
eth = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "fmt",
  "json",
  "std",
  "env-filter",
] }
# TODO: segfault features
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
