[package]
name = "fee_algo_simulation"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
eth = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
services = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "fmt",
  "std",
  "env-filter",
] }
xdg = { workspace = true }
# TODO: segfault
serde-aux = "4.6"
