[package]
name = "fuel-block-committer-cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

description = "Fuel Block Committer cli."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true}
anyhow = { workspace = true}
fuel-types = { workspace = true }
clap = { version ="4.3", features =["derive"] }
url = "2.3"
