[package]
name = "benches"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
e2e-helpers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
fuel = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
